--- a/foo-thesis.tex
+++ b/foo-thesis.tex
@@ -140,6 +140,7 @@
 \todo{daniel's pipeline visualizations, see emails}
 \todo{4k tests}
 \todo[color=yellow]{fixed blue noise pattern when sampling RSM?}
+\todo{performance overview. how much time does everything need}
 
 % \include{chap-examples}
 % \include{chap-moreexamples}
